<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/infoFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@color/white">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/AppBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      style="@style/Theme.MobileUpTestEx"

      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cryptoFragmentToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/toolbar_text"

        tools:title="Bitcoin" />

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/cryptoInfoLayout"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/AppBarLayout">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <LinearLayout
          android:id="@+id/imageAndTextLayout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:orientation="vertical">

        <ImageView
            android:id="@+id/logoInfoIV"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"

            android:layout_gravity="center"

            tools:src="@drawable/bitcoin" />

        <LinearLayout
            android:id="@+id/textLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"

            android:orientation="vertical">

          <TextView
              android:id="@+id/descriptionTV"
              android:layout_width="match_parent"
              android:layout_height="match_parent"

              android:fontFamily="@font/roboto_medium"
              android:text="@string/description"
              android:textColor="@color/toolbar_text"
              android:textSize="20sp" />

          <TextView
              android:id="@+id/descriptionInfoTV"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="8dp"

              android:linksClickable="true"

              android:fontFamily="@font/roboto"
              android:textColor="@color/toolbar_text"
              android:textSize="16sp"

              tools:text="@string/tools_info" />

          <TextView
              android:id="@+id/categoryTV"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="16dp"

              android:fontFamily="@font/roboto_medium"
              android:text="@string/category"
              android:textColor="@color/toolbar_text"
              android:textSize="20sp" />

          <TextView
              android:id="@+id/categoryInfoTV"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="8dp"

              android:fontFamily="@font/roboto_medium"
              android:textColor="@color/toolbar_text"
              android:textSize="16sp"
              tools:text="Smart Contract Platform, Ethereum Ecosystems" />

        </LinearLayout>
      </LinearLayout>
    </ScrollView>
  </androidx.constraintlayout.widget.ConstraintLayout>

  <!--ProgressBar and Error Layout-->
  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="36dp"
      android:layout_height="36dp"

      android:indeterminateTint="@color/chip_text_selected"
      android:visibility="gone"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/errorLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:visibility="gone"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <ImageView
        android:id="@+id/errorIV"
        android:layout_width="120dp"
        android:layout_height="120dp"

        android:layout_gravity="center"
        android:src="@drawable/bitcoin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorTV"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"

        android:text="@string/error"
        android:textAlignment="center"
        android:textColor="@color/toolbar_text"
        android:textSize="14sp"
        android:fontFamily="@font/plus_jakarta_sans_regular"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorIV" />

    <Button
        android:id="@+id/errorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:text="@string/error_btn"
        android:backgroundTint="@color/chip_text_selected"
        android:textColor="@color/status_bar"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorTV"
        app:layout_constraintBottom_toBottomOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>