<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment"
    android:background="@color/white">

  <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/AppBarLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      style="@style/Theme.MobileUpTestEx"

      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <androidx.appcompat.widget.Toolbar
          android:id="@+id/mainFragmentToolbar"
          android:layout_width="match_parent"
          android:layout_height="0dp"

          android:background="?attr/colorPrimary"
          android:minHeight="?attr/actionBarSize"

          app:title="Список криптовалют"
          app:titleTextColor="@color/toolbar_text"

          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"/>

      <com.google.android.material.chip.ChipGroup
          android:id="@+id/chip_group"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_marginStart="16dp"
          android:layout_marginTop="8dp"

          app:selectionRequired="true"
          app:singleSelection="true"

          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/mainFragmentToolbar">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:checked="true"

            android:fontFamily="@font/roboto"
            android:text="@string/usd"
            android:textAlignment="center"
            android:textSize="14sp"
            app:textEndPadding="24dp"
            app:textStartPadding="28dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto"
            android:text="@string/eur"
            android:textAlignment="center"
            android:textSize="14sp"
            app:textEndPadding="24dp"
            app:textStartPadding="28dp" />

      </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </com.google.android.material.appbar.AppBarLayout>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginTop="8dp"

      android:visibility="gone"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/AppBarLayout"
      tools:listitem="@layout/item_fragment_main" />

  <!--ProgressBar and Error Layout-->
  <ProgressBar
      android:id="@+id/progressBar"
      android:layout_width="36dp"
      android:layout_height="36dp"

      android:indeterminateTint="@color/chip_text_selected"
      android:visibility="gone"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/AppBarLayout" />

  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/errorLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:visibility="gone"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/AppBarLayout">

    <ImageView
        android:id="@+id/errorIV"
        android:layout_width="120dp"
        android:layout_height="120dp"

        android:layout_gravity="center"
        android:src="@drawable/bitcoin"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorTV"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"

        android:text="@string/error"
        android:textAlignment="center"
        android:textColor="@color/toolbar_text"
        android:textSize="14sp"
        android:fontFamily="@font/plus_jakarta_sans_regular"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorIV" />

    <Button
        android:id="@+id/errorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"

        android:text="@string/error_btn"
        android:backgroundTint="@color/chip_text_selected"
        android:textColor="@color/status_bar"
        android:fontFamily="@font/roboto_medium"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/errorTV"
        app:layout_constraintBottom_toBottomOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>